// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Message /> renders components 1`] = `
<div
  class="message_Container undefined"
>
  <div
    class="msg_box undefined"
  >
    <div
      class="p_text"
    >
      <p>
        This is an error message.
      </p>
    </div>
  </div>
</div>
`;

exports[`error message format should output 2 <p> 1`] = `
<div
  className="p_text"
>
  <p>
    Please input a username
  </p>
  <p>
    Please input a password
  </p>
</div>
`;

exports[`message state mount components 1`] = `
<Message
  class="test_class"
  message={
    Array [
      "This is an error message.",
    ]
  }
  state="error"
>
  <div
    className="message_Container test_class"
  >
    <div
      className="msg_box error"
    >
      <div
        className="p_text"
      >
        <p>
          This is an error message.
        </p>
      </div>
    </div>
  </div>
</Message>
`;
